Fix backend authorization issues